Project cloud_disk{
    database_type: 'mysql'
    Note: '数据库设计文件'
    database_name: 'cloud_disk'
    version: '1.0'
    default_engine: 'InnoDB'
    default_charset: 'utf8mb4'
}

Table files as F {
    id bigint [pk, increment]
    file_sha1  varchar(255) [not null,  note: '文件的sha1值']
    file_size bigint [not null,default: 0,note: '文件大小']
    file_addr varchar(1024) [not null, default: '',note: '文件存储地址']
    status tinyint [not null, default: 0,note: '文件状态(0: 正常,1:禁用, 2: 删除)']
    create_at timestamp [not null, default: `CURRENT_TIMESTAMP`,note: '创建时间']
    update_at timestamp [not null, default: `CURRENT_TIMESTAMP`,note: '更新时间']
    extend int [not null, default: 0,note: '扩展字段']
    extend2 text [note: '扩展字段2']

    indexes {
        status [name: 'idx_status']
        (file_size, file_sha1) [unique, name: 'idx_file_size_file_sha1']
    }
}



Table users as U {
    id bigint [pk, increment]
    username varchar(255) [not null, unique, note: '用户名']
    password varchar(255) [not null, note: '密码']
    create_at timestamp [not null, default: `CURRENT_TIMESTAMP`,note: '创建时间']
    update_at timestamp [not null, default: `CURRENT_TIMESTAMP`,note: '更新时间']
    last_login_at timestamp [note: '最后登录时间']
    email varchar(128) [not null, unique, note: '邮箱']
    phone varchar(128) [not null, unique, note: '手机号']
    email_verified bool [not null, default: 0,note: '邮箱是否验证']
    phone_verified bool [not null, default: 0,note: '手机号是否验证']
    profile text [note: '用户信息']
    status tinyint [not null, default: 0,note: '用户状态(0: 正常,1:禁用, 2: 删除)']

    indexes {
        username [unique, name: 'idx_username']
        email [unique, name: 'idx_email']
        phone [unique, name: 'idx_phone']
    }
}

Table file_users as FU {
    id bigint [pk, increment]
    username varchar(255) [not null, note: '用户名',ref:> U.username]
    file_sha1 varchar(255) [not null, note: '文件的sha1值',ref:> F.file_sha1]
    file_size bigint [not null,default: 0,note: '文件大小']
    filename varchar(255) [not null, note: '文件名']
    create_at timestamp [not null, default: `CURRENT_TIMESTAMP`,note: '创建时间']
    update_at timestamp [not null, default: `CURRENT_TIMESTAMP`,note: '更新时间']

    status tinyint [not null, default: 0,note: '文件用户状态(0: 正常,1:禁用, 2: 删除)']

    indexes {
        (username,filename, file_sha1) [unique, name: 'idx_username_filename_file_sha1']
    }
}   